Fix multiple layout issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -3,5 +3,8 @@
 .canvas,
 #page-zones__main > .widget:not(.row),
 .row:not(.widget):not(.row--width-no-padding) .row__container {
-
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1024px;
+  width: 90%;
 }
